force-app/main/default/objects/Contact/fields/Date_Waitlisted__c.field-meta.xml
<CustomField>
    <fullName>Date_Waitlisted__c</fullName>
    <inlineHelpText>Required if Registration Status = Waitlisted
Used to prioritise the order in which waitlisted students are contacted if a place becomes available</inlineHelpText>
    <label>Date Waitlisted</label>
    <type>Date</type>
</CustomField>