force-app/main/default/objects/Contact/fields/Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Name__c</fullName>
    <formula>FirstName + " " +  LastName</formula>
    <label>Full Name</label>
    <type>Text</type>
</CustomField>