force-app/main/default/objects/Contact/fields/Parental_Email_Updated__c.field-meta.xml
<CustomField>
    <fullName>Parental_Email_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to TRUE if Parental_Email_Updated__c on the parent account is set to TRUE
When TRUE, fires a BP "Propagate changed parental email to attendance records" for related contacts which copies the parental email address from the account to every future attendance record</description>
    <inlineHelpText>Set TRUE if Parental_Email_Updated__c on parent account is set to TRUE
If TRUE, fires a BP "Copy changed parental email to attendance records" for related contacts which copies parental email address from the account to every future attendance record</inlineHelpText>
    <label>Parental Email Updated</label>
    <type>Checkbox</type>
</CustomField>