force-app/main/default/objects/Contact/fields/Salesforce_User_Account__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_User_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>For staff members, link the contact to the user account so that they canbe reminded of their login username when alerted to an upcoming class</inlineHelpText>
    <label>Salesforce User Account</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>