force-app/main/default/objects/Contact/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <formula>Salesforce_User_Account__r.Username</formula>
    <label>Username</label>
    <type>Text</type>
</CustomField>