force-app/main/default/objects/Contact/validationRules/Reg_Status_is_Waitlisted_must_have_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Reg_Status_is_Waitlisted_must_have_date</fullName>
    <active>true</active>
    <description>If the Registration Status = Waitlisted, then the Date Waitlisted field must not be null</description>
    <errorConditionFormula>ISPICKVAL(Registration_Status__c, "Waitlisted") &amp;&amp;  ISBLANK( Date_Waitlisted__c )</errorConditionFormula>
    <errorDisplayField>Date_Waitlisted__c</errorDisplayField>
    <errorMessage>If the Registration Status = Waitlisted, then the Date Waitlisted field must not be null</errorMessage>
</ValidationRule>