force-app/main/default/objects/Contact/listViews/Staff.listView-meta.xml
<ListView>
    <fullName>Staff</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Contact_Type__c</columns>
    <columns>Registration_Status__c</columns>
    <columns>CONTACT.PHONE3</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Gender__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contact_Type__c</field>
        <operation>equals</operation>
        <value>Staff</value>
    </filters>
    <filters>
        <field>Registration_Status__c</field>
        <operation>equals</operation>
        <value>Staff</value>
    </filters>
    <label>Staff</label>
</ListView>