force-app/main/default/objects/Contact/listViews/Students.listView-meta.xml
<ListView>
    <fullName>Students</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Registration_Status__c</columns>
    <columns>CONTACT.PHONE3</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Gender__c</columns>
    <columns>CONTACT.BIRTHDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contact_Type__c</field>
        <operation>equals</operation>
        <value>Student</value>
    </filters>
    <filters>
        <field>Registration_Status__c</field>
        <operation>notEqual</operation>
        <value>Inactive,Staff,Withdrawn</value>
    </filters>
    <label>Students</label>
</ListView>